--- a/정리.md
+++ b/정리.md
@@ -20,20 +20,26 @@
 힐베르트의 17번 문제
 SVM
 
-> 사진추가필요(1)
+
+>![자율주행](./자율주행1.png)
+>>![자율주행2](./자율주행2.png)
 
 > 아래와 같은 주차장이 있을 때 자율 주행을 통해 주차를 시키려 한다. 이때 생성된 함수가 5x²+16x+13 일 수 있는가에 대해 설명하시오.
->사진추가필요(2)
+![자율주행3](./자율주행3.png)
+>>![자율주행4](./자율주행4.png)
 
 > ( 마진 ) 은 클래스들 사이의 간격, 각 클래스의 말단에 위치한 데이터들 사이의 거리를 의미합니다. SVM 은 분류를 할 때 이 ( 마진 ) 을 최대화 시키고자 합니다.
+
 >  ( 서포트 벡터 ) 는 마진에서 가장 가까이 위치해 있는 각 클래스의 데이터 입니다. ( 서포트 벡터 ) 데이터들의 위치에 따라 경계의 위치가 달라집니다.
 
 >SVM 의 정의를 설명하시오.
 >>SVM 은 n차원인 공간을 (n-1) 차원으로 나눌 수 있는, 즉 데이터를 분리하는 최적의 초평면, 최대 마진이 되도록 클래스를 분류하는 기법입니다.
 
 > 픽셀 좌표와 정규 좌표 사이를 변환할 때 필요한 요소들을 서술하고, 그 것을 이용하여 행렬식을 서술하시오.
+![자율주행5](./자율주행5.png)
 >> 픽셀 좌표 p’ = (u, v) / 초점거리 fx, fy / 광학축과 영상평면이 만나는 픽셀 좌표인 주점 cx, cy 가 필요하다.따라서 정규 좌표 변환을 위한 행렬식은 이렇게 나타낼 수 있다.
->사진추가필요(3)
+![자율주행6](./자율주행6.png)
+
 
 ## 빅데이터 알고리즘과 하둡의 적용예
 ### 김동희/임정묵
@@ -97,10 +103,12 @@ RFID에 대한 간략한 설명
 GPS에 대한 내용.
 
 > 다음과 같이 GPS 수신기와 GPS 위성1, 2, 3, 4의 좌표가 나타나 있다. 각 GPS 위성이 보내는 시점의 시간을 각각 s1, s2, s3, s4라 하고 GPS 수신기에 신호가 도착한 시간을 각각 t1, t2, t3, t4라고 할 때 GPS 수신기를 구하는 식을 유도하라. (단, 시간에 대한 오차는 d라 하며, c는 GPS 위성의 전파 속도인 빛의 속도이다.)
->>사진참조
+![IoT1](./IoT1.png)
+>>![IoT2](./IoT2.png)
 
 >각각의 GPS 위성에 좌표가 다음과 같고 각 GPS 위성에서 보낸 시간과 GPS 수신기에 도달한 시간의 차가 각각 α, β, γ, δ 라 할 때 Question.1에서 유도한 식을 이용하여 GPS 수신기의 좌표를 구하여라. (단, 시간의 오차 d = 0이며 GPS 위성의 전파 속도는 c라고 한다.)
->>사진참조
+![IoT3](./IoT3.png)
+>>![IoT4](./IoT4.png)
 
 ## 빅데이터와 기술통계
 ### 김현재/신중수
