--- a/정리.md
+++ b/정리.md
@@ -114,7 +114,10 @@ GPS에 대한 내용.
 ### 김현재/신중수
 
 빅데이터가 무엇인지 서술하고 통계적 이론을 서술
+
 Box plot//
+![빅데이터](./빅데이터1.png)
+
 
 > 빅데이터의 정의
 >> 기존 방식으로 처리할 수 없는 다양한 종류의 대규모 데이터로부터 가치를 추출하는 것
@@ -137,7 +140,7 @@ Box plot//
 
 > box plot 그리기
 >			-10  28  29  29  30  34  35  35  37  60
->>그림 참조
+>>![빅데이터2](./빅데이터2.png)
 
 ## 자율주행차
 ### 박상우/이우형
@@ -148,9 +151,11 @@ Box plot//
 
 사용되는 기술(밀리파 레이더/라이다 등)
 
-> Q .  함수의 값이 음이 아닐 경우,, 제곱의 합의 형태로 바꿀 수 있는가? 이 것이 자율주행차가 주차할 때 어떻게 활용될 수 있는가?
+> 함수의 값이 음이 아닐 경우,, 제곱의 합의 형태로 바꿀 수 있는가? 이 것이 자율주행차가 주차할 때 어떻게 활용될 수 있는가?
 >>‘음이 아닌 유리함수를 언제나 제곱의 합의 형태로 나타낼 수 있다.
 >>1927년 오스트리아 수학자 에밀 아르틴이 증명
+>>> Ex)  5x²+16x+13  ->  (x+2)²+(2x+3)²
+
 
 ## 빅 데이터를 이용한 교통
 ### 박예진/오성호
@@ -176,20 +181,35 @@ Box plot//
 ## 인공지능의 역사와 기초
 ### 안석현/박재성
 
-이 미친 트롤러새끼야
+이 미친 트롤러새끼야  
 문제까지 냈으면 넌 이미 연못에서 변사체로 발견됐을거다 
 
 퍼셉트론/역전파(편미분)/합성곱신경망(합성곱)/강화학습(사실 나도 잘 모름)
+![편미분](./AI1.png)
+
+![합성곱](./AI2.gif)
+
 
 ## 최단경로 알고리즘
 ### 정원영,추영호,최상훈
 
 다익스트라 알고리즘
+> 한 정점에서부터 다른 모든 정점으로의 최단경로를 구하는 알고리즘  
+> 음의 가중치를 가지는 간선이 있을경우 계산 불가능
+![다익스트라](./알고리즘_다익스트라.png)
+![다익스트라](./알고리즘_다익스트라2.png)
 
 플로이드 - 워셜 알고리즘
+> 모든 정점으로부터 다른 모든 정점으로의 최단 경로를 구하는 알고리즘  
+> 음의 가중치를 가지는 간선이 있어도 계산 가능하지만 음의 사이클이 있을경우 계산 불가.
 
 벨만 - 포드 알고리즘
+> 한 정점으로부터 다른 모든 정점으로의 최단 경로 및 거리를 구하는 알고리즘  
+> 음수 사이클이 있을떄는 계산할 수 없지만, 음수 가중치가 있어도 제대로 작동하며 음수 사이클 유무를 판별할 수 있다. 
+![벨만포드1](./벨만-포드1.png)
+![벨만포드2](./벨만-포드2.png)
 
+### 문제
 >도시와 도시사이를 운행하는 시외버스가 있다.
 도시가 여러 개가 있으며, 모든 도시의 쌍 사이 시외버스의 최단경로 노선을 구하고 싶을때, 어떤 알고리즘이 적절한가?
 >>1. 다익스트라
@@ -209,18 +229,23 @@ Box plot//
 MLP와 그 예제
 
 역전파/경사하강법
+
 > 인간의 신경세포를 모방하여 만든 퍼셉트론에서 활성화 함수는 어떤 역할을 표현한 것인지 서술하라.
 >> 퍼셉트론에서는 임계값 이상의 값일 경우에만 다음 노드로 값을 전달한다.
 이는 실제 신경세포에서 신호들의 강도의 합이 역치 이상일때만 축삭돌기로 신호를 전달하는 것을 표현한다.
 
->다음과 같은 그림에서 계층 2 노드들의 값을 행렬의 내적을 이용해 표현하라.
->그림 추가
->>그림추가
+> 다음과 같은 그림으로 표현될 수 있는 것은?
+![AI3](./AI3.png)
+>> 다층 퍼셉트론
 
->은닉층의 1번, 2번 노드의 오차를 오차의 역전파를 통해 구하라.
->그림 참고
->>𝑒_1=0.42,
-𝑒_2=0.88(그림참고)\
+>다음과 같은 그림에서 계층 2 노드들의 값을 행렬의 내적을 이용해 표현하라.
+>![AI4](./AI4.png)
+>>![AI5](./AI5.png)
+
+
+>은닉층의 1번, 2번 노드의 오차를 오차의 역전파를 통해 구하라.  
+>![AI6](./AI6.png)
+>>![AI7](./AI7.png)
 
 >함수의 최저점을 구하는 방법 중 하나로 기울기가 완만해지는 쪽으로 이동하는 접근 방식을 무엇이라고 하는가?
 >>경사하강법
