--- a/정리.md
+++ b/정리.md
@@ -298,7 +298,8 @@ MLP와 그 예제
 ## 위상정렬
 ### 이정섭/박원진
 스타크래프트 ai를 예시로 위상정렬 알고리즘을 설명
-
+![위상정렬](./위상정렬.png)
+![순위](./순위.png)
 > 위상 정렬(Topological Sort)과 순위 알고리즘의 차이점?
 >> 위상 정렬은 정점을 찍는 순서들을 정렬하는 알고리즘이고, 결과는 1가지 이상이다.
 >>순위 알고리즘은 효율적인 순서를 정하는 알고리즘이고, 결과는 1가지이다.
@@ -332,14 +333,9 @@ MLP와 그 예제
 
 그저 빛...
 
-> 신경망의 학습 패턴 x = [1 0 1]이 입력될 때 학습 신호 γ가 2라면 연결 강도의 변화량 Δw는 얼마인가?
->> Δw = nγx
->> [2 0 2]
+> ![AI8](./AI8.png)
 
-> 학습하는 과정에 있어서 현 단계의 연결 강도가 w = [0.2 0.5 0.3]인 경우, 목표치가 1인 학습 패턴 x = [0 0 1]을 신경망에 입력한 결과, -1이 출력되었다.
- 이때의 연결강도 변화량과 다음 학습 단계에서의 연결 강도를 구하라.
- 이 때 학습률은 1, 학습 신호는 목표치와 출력의 차이다.
->> 사진 참조
+> ![AI9](./AI9.png)
 
 ## 자율주행차의 인공지능
 ### 김선빈/정선호
@@ -348,8 +344,10 @@ MLP와 그 예제
 합성곱/패딩/풀링
 
 패딩은 합성곱 연산하기 전에 주변을 0으로 둘러줘서 연산 후에도 사이즈가 줄어들지 않도록 처리하는 목적
+![AI10](./AI10.png)  
 
 풀링은 특정한 기준의 (일반적으로는 값이 큰)요소만 뽑아내서 더 작은 배열을 만드는것
+![AI11](./AI11.png)
 
 >다음 중 자율주행차에서 물체 식별에
   주로 사용되는 알고리즘이 아닌 것은?
@@ -357,17 +355,7 @@ MLP와 그 예제
 
 >CNN기법을 이용해 다음 행렬들에 관해 결과값을 도출하라.
   (단 패딩 데이터는 0만을 사용하며, 최댓값을 풀링한다.)
-
-|5|7|           
-|--|--|         
-|3|8|
-
-텐서조각 
-
-|1|0|1|
-|-|-|-|
-|1|2|0|
-|3|0|1|
+![AI12](./AI12.png)
 
 > SIFT와 Haar-like의 장단점을 비교 설명하시오.
 
@@ -410,7 +398,18 @@ GPS 관련
 >어떤학생이 공부시간에 따라서 다음과 같은 점수를 얻었을때,  이학생이 6시간, 7시간, 8시간을 공부하였을때의 성적을 예측해보고싶다. w=13, b=1일때,  cost(w,b)값을 구하시오.
 >>44.5
 
->앞서 구한 cost값을 경사하강법을 통해 w값을 11 , b값을 2라고 구했을때, 앞서구하려던 6시간, 7시간, 8시간을 공부하였을때의 성적을 구하시오.
+|Hours(x)|Score(y)|
+|--|--|
+|2|25|
+|3|50|
+|4|42|
+|5|61|
+>> ![AI13](./AI13.png)
+>> ![AI14](./AI14.png)
+
+
+> 앞서 구한 cost값을 경사하강법을 통해 w값을 11 , b값을 2라고 구했을때, 앞서구하려던 6시간, 7시간, 8시간을 공부하였을때의 성적을 구하시오.  
+
 >>H(x)=11x+2가되며
 x에 6, 7, 8을 각각 대입하면  
 H(6)=68, H(7)=79, H(8)=90이 된다.
@@ -426,14 +425,16 @@ H(6)=68, H(7)=79, H(8)=90이 된다.
 
 알고리즘의 종류와 조건
 
-> 다음 문장들을 보고 알고리즘인지 아닌지 구분하시오.
+> 다음 문장들을 보고 알고리즘인지 아닌지 구분하시오.  
 알고리즘이 아니라면 어째서 알고리즘이 아닌지 판단하시오.
->> 땅에 떨어진 돈을 찾기 위해 땅을 바라보며 길을 따라 걷는다.
-미로를 나가기 위해 한쪽 손을 벽에 짚고 쭉 걸어간다.
-숫자를 정렬하기 위해 크기가 가까운 두 수들을 짝지어 서로 위치를 바꾸는 것을 반복한다.
+>> 땅에 떨어진 돈을 찾기 위해 땅을 바라보며 길을 따라 걷는다.  
+미로를 나가기 위해 한쪽 손을 벽에 짚고 쭉 걸어간다.  
+숫자를 정렬하기 위해 크기가 가까운 두 수들을 짝지어 서로 위치를 바꾸는 것을 반복한다.  
+
 
 > 주어진 식들을 보고 Big-O표기법에 맞춰 시간복잡도와 공간복잡도를 구한 뒤
-알고리즘들의 효율성을 비교하시오
->> 연산횟수 = n*logn + n^2 - 20n - 10, 사용 데이터 = 크기가 N인 배열 1개
-연산횟수 = n^2 + n +20, 사용 데이터 = 크기가 N인 배열 3개
-연산횟수 = n^2 + 4n – 31, 사용 데이터 = 크기가 NxN인 배열 1개
+알고리즘들의 효율성을 비교하시오  
+
+> 연산횟수 = n*logn + n^2 - 20n - 10, 사용 데이터 = 크기가 N인 배열 1개  
+연산횟수 = n^2 + n +20, 사용 데이터 = 크기가 N인 배열 3개  
+연산횟수 = n^2 + 4n – 31, 사용 데이터 = 크기가 NxN인 배열 1개  
